--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mdi/font": "5.9.55",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
