--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdi/font": "5.9.55",
+    "@vuepic/vue-datepicker": "^6.0.3",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "mitt": "^3.0.1",
